--- a/public/success.html
+++ b/public/success.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" style = "background-color: dodgerblue">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -8,22 +8,20 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Forgot Password</title>
+    <title>Success</title>
   </head>
   <body>
     <div class = "grid-container">
       <div id="topnav">
-        <h1>My Login Page</h1>
+        <h1>You Have Logged In</h1>
       </div>
-      <div id="loginForm">
-        <div id="Para">
-          <p>Forgot your username or password? <br> Please type a valid email and we will send you an email link to reset your password.</p>
-        </div>
-        <form>
-          <input type="text" placeholder="email">
-          <button type="submit">Submit</submit>
-        </form>
+    </div>
+    <div id = "loginForm">
+      <div id = "success">
+          <p> Congrats!! You have managed to login to my page! I hope you enjoy your stay!!</p>
       </div>
+    </div>
+  </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
